# meridian

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/meridian-cli/: Cargo.toml
crates/meridian-cli/src/: main.rs  testing.rs
crates/meridian-codegen/: Cargo.toml
crates/meridian-codegen/src/: backend.rs  flink.rs  lib.rs  python.rs  spark.rs
crates/meridian-ir/: Cargo.toml
crates/meridian-ir/src/: builder.rs  ir.rs  lib.rs  optimizer.rs
crates/meridian-lsp/: Cargo.toml
crates/meridian-lsp/src/: lib.rs
crates/meridian-parser/: Cargo.toml
crates/meridian-parser/src/: ast.rs  error.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
crates/meridian-runtime/: Cargo.toml
crates/meridian-runtime/src/: executor.rs  lib.rs
crates/meridian-types/: Cargo.toml
crates/meridian-types/src/: checker.rs  env.rs  error.rs  inference.rs  lib.rs  types.rs
docs/: cli-reference.md  getting-started.md  language-reference.md
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/snippets/: meridian.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: meridian.tmLanguage.json
examples/: aggregations.mer  functions.mer  hello.mer  joins.mer  math_test.mer  simple.mer  simple_test.mer  streaming.mer
