[workspace]
resolver = "2"
members = [
    "crates/meridian-parser",
    "crates/meridian-types",
    "crates/meridian-ir",
    "crates/meridian-codegen",
    "crates/meridian-runtime",
    "crates/meridian-cli",
    "crates/meridian-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Katie <blackabee@gmail.com>"]
repository = "https://github.com/sudokatie/meridian"

[workspace.dependencies]
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
logos = "0.14"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
duckdb = { version = "1.0", features = ["bundled"] }
