[package]
name = "meridian-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parser for the Meridian data transformation language"

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
