[package]
name = "meridian-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime execution for Meridian pipelines"

[dependencies]
meridian-codegen = { path = "../meridian-codegen" }
duckdb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
