[package]
name = "meridian-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type system for the Meridian data transformation language"

[dependencies]
meridian-parser = { path = "../meridian-parser" }
thiserror = { workspace = true }

[dev-dependencies]
